add user done; now working on users exploration

--- a/assets/html/add-user.html
+++ b/assets/html/add-user.html
@@ -167,8 +167,8 @@
                                 <label class="col-form-label">Comune di residenza:</label>
                                 <select class="form-select" id="city" required>
                                     <option value="undefined" selected>Scegli...</option>
-                                    <option value="">Taranto</option>
-                                    <option value="">Grottaglie</option>
+                                    <option value="Taranto">Taranto</option>
+                                    <option value="Grottaglie">Grottaglie</option>
                                 </select>
                             </div>
                             <div class="col"></div>
@@ -188,14 +188,14 @@
                                 <label class="col-form-label">Incarico:</label>
                                 <select class="form-select" id="role" required>
                                     <option value="undefined" selected>Scegli...</option>
-                                    <option value="">Tsar</option>
-                                    <option value="">Leader Supremo</option>
+                                    <option value="Tsar">Tsar</option>
+                                    <option value="Leader Supremo">Leader Supremo</option>
                                 </select>
                             </div>
                             <div class="col"></div>
                             <div class="col-3 bg-body rounded shadow-lg">
                                 <label for="formFile" class="form-label">Scegli una foto:</label>
-                                <input class="form-control" type="file" id="pic" accept=".jpg,.jpeg,.png,.gif">
+                                <input class="form-control" type="file" id="pic" accept=".jpg,.jpeg,.png">
                             </div>
                             <div class="col"></div>
                             <div class="col-3 bg-body rounded shadow-lg text-center position-relative">
@@ -223,7 +223,7 @@
                             <div class="toast-body">
                                 <p class="fs-4">Confermi di voler aggiungere il volontario?</p>
                                 <div class="mt-2 pt-2 border-top">
-                                    <a>
+                                    <a href="users.html">
                                         <button id="add-user" type="button" class="btn btn-primary btn-lg" data-bs-dismiss="toast">Aggiungi</button>
                                     </a>
                                     <button type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="toast">Chiudi</button>
