--- a/assets/html/users.html
+++ b/assets/html/users.html
@@ -131,14 +131,188 @@
                     <div class="my-3 p-3 bg-body rounded shadow-lg">
                         <h2 class="border-bottom pb-2 mb-3" >Volontari</h6>
                     </div>
-                    <a href="add-user.html">
-                        <button type="button" class="btn btn-primary btn-lg">Aggiungi volontario</button>
-                    </a>
-                    <button class="btn btn-outline-success btn-lg" type="submit">Cerca volontario</button>
+                    <div class="my-3 p-3 bg-body rounded shadow-lg">
+                        <a href="add-user.html" class="btn btn-primary btn-lg">Aggiungi volontario</a>
+                        <button class="btn btn-outline-success btn-lg" type="submit">Cerca volontario</button>
+                    </div>
+                    
+                    <div class="row row-cols-1 row-cols-xxl-3 g-4">
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
+                                <img src="../pics/4.jpg" class="card-img-top img-thumbnail">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nome Cognome</h5>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Incarico: Incarico</li>
+                                    <li class="list-group-item">Città: città</li>
+                                    <li class="list-group-item">Data di nascita: gg/mm/aaaa</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary btn-lg">Modifica</a>
+                                    <a href="#" class="btn btn-danger btn-lg">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
         <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="../js/get-users.js"></script>
     </body>
 </html>
